# learn_project

./: .gitignore  README.md  database.md  linux_shell.md  network.md
bigdata/es/: efk.md  es_deploy.md  py_es.py
bigdata/etcd/: EtcdReadMe.md
bigdata/hbase/: hbase.md  hbase_demo.py  hbase_use.md  py_hbase.py
bigdata/hive/: hive.md
bigdata/kafaka/: README.md  consumer.py  producer.py  py_kafka.py
bigdata/promehteus/: README.md
bigdata/rabbitmq/: consumer.py  producer.py
c_basic/: README.md  array_exceeded.c  daemonize.c  file_write.md  gdb.md  memory.c  pthread.md  union.c
database/: README.md  mysql.md  nosql.md
distributed/: limiter.md  mpi.md
docker/: DockerFile  docker-compose.md  docker-pull-gcr.io.md  dockerReadme.md
golang/: README.md  go-web.md  golang.md
http_tool/: CRLF.md
k8s/: README.md  gfs-ceph.md  helm.md  k8s.md  k8s_debug.md  k8s_deploy.md  k8s_gpu.md  kubeflow.md  rancher.md
logging/: LogReadme.md  logger.py  py_log.py
machine_learning/: README.md  ml_on_k8s.md  mxnet.md
mongodb/: mongodb.md
mysql/: lock.md  mysql.md  pgsql.md  py_mysql.py
nginx/: NginxReadMe.md  README.md  nginx.conf
project/: database_test
python/: README.md  api_auth.md  unitest.md
redis/: README.md  RedisReadMe.md  lua_use.md  server_handle_cmd_.md  structure
redis/key-value-server/: CMakeLists.txt  README.md  client.cpp  hashtb.cpp  hashtb.h  server.cpp
socket/: README.md  SocketReadMe.md  sendfd.cpp
team/: README.md
test/: performance_test.md
tidb/: tidb
tools/: commont_tool.md  git.md  shadowsocks.md  ubuntu.md
(+356 files in other folders)
